# OpenGT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
OpenGT.Main/: App.cpp  App.h  CMakeLists.txt  Main.cpp  MainConfig.cpp  MainConfig.h
OpenGT.Main/Node/: NodeSession.cpp  NodeSession.h  NodeSessionManager.cpp  NodeSessionManager.h
linux/: linux_compile.sh
linux/makecontrol/: CMakeLists.txt
linux/makemain/: CMakeLists.txt
shared/: BaseApp.cpp  BaseApp.h  ConfigBase.cpp  ConfigBase.h  PlatformSetup.cpp  PlatformSetup.h  ProtocolDef.h  pch.h
shared/Common/: CommonDef.cpp  CommonDef.h  CommonServerDef.cpp  CommonServerDef.h
shared/Engine/: RingBuffer.cpp  RingBuffer.h
shared/Logger/: LogFileA.cpp  LogFileA.h  LogFileBase.cpp  LogFileBase.h  LogFileW.cpp  LogFileW.h
shared/Network/: NetUtils.cpp  NetUtils.h  NetworkServerSocket.cpp  NetworkServerSocket.h
shared/Util/: MiscUtils.cpp  MiscUtils.h  ResourceUtils.cpp  ResourceUtils.h  TextParser.cpp  TextParser.h
shared/Util/FileSystem/: FileManager.cpp  FileManager.h  FileSystem.cpp  FileSystem.h  StreamingInstance.cpp  StreamingInstance.h  StreamingInstanceFile.cpp  StreamingInstanceFile.h
source/OpenGT.Control/: App.cpp  App.h  Main.cpp
source/OpenGT.Main/: App.cpp  App.h  Main.cpp
